Fri Apr 28 16:39:47 1995  Mark Eichin  <eichin@cygnus.com>

	* kparse.h (strutol, strsave): are only static in this module.

Fri Apr 28 15:05:23 1995  Mark Eichin  <eichin@cygnus.com>

	* krb4-proto.h: #if 0, not #ifdef 0.

Fri Apr 28 14:56:39 1995  Theodore Y. Ts'o  <tytso@dcl>

	* lsb_addr_cmp.h: Don't try to include osconf.h

Fri Apr 28 08:24:23 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* conf.h, conf-*.h: Removed.  We don't need them anymore,
		we're using autoconf!  (And things like MSBFIRST AND
		LSBFIRST aren't needed anyway, since the CNS V4
		library figures this all out dynamically anyway.)

	* krb4-proto.h: Don't define the functions found in getenv.o or
		setenv.o.  Declare krb_stime() instead of stime().

Thu Apr 27 17:12:30 1995  Mark Eichin  <eichin@cygnus.com>

	* krb.h: add _fmemcpy, _fstrncpy, and far_fputs from cc-unix.h also.

Thu Apr 27 14:22:10 1995  Mark Eichin  <eichin@cygnus.com>

	* krb.h (DECRYPT_TKT_TYPE_DEFINED, KEY_PROC_TYPE_DEFINED): needed
	to keep secondary (readability) defines in g_in_tkt.c out.

Thu Apr 27 13:32:22 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* conf-osf1alpha.h: New file

	* osconf.h: Add inclusion of conf-osf1alpha.h

	* krb.h: Add const to krb_err_txt to agree with library definition

Thu Apr 27 10:55:00 1995  Mark Eichin  <eichin@cygnus.com>

	* krb.h: make INTERFACE, FAR go away for now.
	Drag in the unix time conversion functions for unix only.
	Locally define PROTOTYPE().
	Drag in unix versions of SOCKET macros.
	Recognize DEFINE_SOCKADDR and NEED_TIME_H the way cc-unix.h does.
	Declare krb_ignore_ip_address.
	Define DEB() to support non-printf debugging.
	Declare errno.
	Define key_proc_type and decrypt_tkt_type.
	* prot.h: add KERB_ERR_PREAUTH_SHORT and _MISMATCH from Cygnus
	extensions.
	* krbports.h: new file, has default ports for V4 services for
	hard-coded fallback.
	* lsb_addr_cmp.h: from V4, handles the mutant comparison
	functions needed for the V4 "direction" comparison. (Rename